test/conformance/kuttl/validate/clusterpolicy/standard/cel/cel-preconditions/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
